# pomegranate-pie

./: .gitignore  .gitmodules  LICENSE  README.md
.VSCodeCounter/2023-12-06_22-16-22/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
hex2dec/: CMakeLists.txt  README.md
hex2dec/app/: CMakeLists.txt  main.cpp
hex2dec/src/: CMakeLists.txt
hex2dec/src/config/: arg_strings.hpp  config.cpp  config.hpp  hex2dec_config.hpp
pmgpie-coordinator/: .gitignore  CMakeLists.txt  README.md
pmgpie-coordinator/app/: CMakeLists.txt  main.cpp  pmgpie_coordinator.cpp  pmgpie_coordinator.hpp
pmgpie-coordinator/lib/: CMakeLists.txt
pmgpie-coordinator/out2/: pi_hex.txt
pmgpie-coordinator/proto/: frontend.proto
pmgpie-coordinator/src/: CMakeLists.txt
pmgpie-coordinator/src/config/: arg_strings.hpp  config.cpp  config.hpp  pmgpie_coordinator_config.hpp
pmgpie-coordinator/src/ctrl_c/: ctrl_c.hpp
pmgpie-coordinator/src/file/: file_writer.cpp  file_writer.hpp
pmgpie-coordinator/src/frontend/: frontend.cpp  frontend.hpp
pmgpie-coordinator/src/hex_aggregator/: hex_aggregator.cpp  hex_aggregator.hpp
pmgpie-coordinator/src/pmgpie_cluster_server/: pmgpie_cluster_server.hpp
pmgpie-coordinator/src/stats/: stats.hpp
pmgpie-coordinator/src/tcp_server/: tcp_server.hpp  tcp_server_connection.hpp  tcp_server_frame.hpp
pmgpie-coordinator/src/tsqueue/: tsqueue.hpp
pmgpie-coordinator/src/work_unit_combiner/: work_unit_combiner.cpp  work_unit_combiner.hpp
pmgpie-coordinator/src/work_unit_manager/: tslist.hpp  work_unit_manager.cpp  work_unit_manager.hpp
pmgpie-coordinator/web/: README.md  digits.html  digits.js  index.html  main.js  styles.css
pmgpie-worker/: CMakeLists.txt
pmgpie-worker/app/: CMakeLists.txt  main.cpp  pmgpie_worker.cpp  pmgpie_worker.hpp
pmgpie-worker/lib/: CMakeLists.txt
pmgpie-worker/lib/config/: arg_strings.hpp  config.cpp  config.hpp  pmgpie_worker_config.hpp
pmgpie-worker/lib/ctrl_c/: ctrl_c.cpp
pmgpie-worker/lib/hex_aggregator/: hex_aggregator.hpp
pmgpie-worker/lib/net_client/: net_client.cpp  net_client.hpp  net_message.hpp
pmgpie-worker/lib/pi/: pi.cpp  pi.hpp
pmgpie-worker/lib/uuid/: uuid.hpp
pmgpie-worker/lib/worker_thread/: worker_thread.cpp  worker_thread.hpp
pmgpie-worker/proto/: pmgpie_cluster.proto
pmgpie-worker/src/: CMakeLists.txt
pmgpie-worker/src/config/: arg_strings.hpp  config.cpp  pmgpie_worker_config.hpp
pmgpie-worker/src/net_client/: net_client.cpp  net_client.hpp  net_client_connection.hpp  net_client_frame.hpp  tsqueue.hpp
pmgpie-worker/src/worker_pool/: worker_thread.cpp  worker_thread.hpp  worker_thread_pool.cpp  worker_thread_pool.hpp  worker_thread_pool_common.hpp
preliminary/bbp_js/: bbp1.js
preliminary/bbp_py/: bbp1.py
preliminary/bbp_test/: Makefile  a.out  bbp_test  bbp_test copy.cpp  bbp_test.cpp  digits.h  hex_aggregator.hpp  test.cpp
preliminary/expmod/: test1.py
preliminary/net/: echo_server.py
preliminary/pmgpie_cluster_server/: pmgpie_cluster.proto
preliminary/protobuf_test/: CMakeLists.txt  client.cpp  client.hpp  client_connection.hpp  client_connection_old.hpp  client_frame.hpp  server.cpp  server_class.hpp
preliminary/protobuf_test/proto/: test.proto
result-checker/: pi_tocheck.txt  result_checker.py
